refactor: 代码重构和优化添加通知工具类